--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '2.2.5.RELEASE'
+        springBootVersion = '2.1.16.BUILD-SNAPSHOT'
         springStarterSleuth = '2.1.1.RELEASE'
         pactVersion = '4.0.7'
         checkstyleVersion = '7.6.1'
@@ -16,7 +16,7 @@ buildscript {
 }
 
 plugins {
-	id 'org.springframework.boot' version '2.2.5.RELEASE'
+	id 'org.springframework.boot' version '2.1.16.BUILD-SNAPSHOT'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
 	id 'jacoco'
@@ -25,16 +25,22 @@ plugins {
 	id 'org.sonarqube' version '2.8'
 }
 
-group = 'application'
+group = 'com.rhos'
 version = '0.0.1'
 sourceCompatibility = '1.8'
 
 repositories {
 	mavenCentral()
+	maven { url 'https://repo.spring.io/milestone' }
+	maven { url 'https://repo.spring.io/snapshot' }	
 }
 
 dependencies {
+	//implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	runtimeOnly 'mysql:mysql-connector-java'	
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
@@ -49,29 +55,29 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
 
 	// sprimg sleuth
-    implementation("org.springframework.cloud:spring-cloud-starter-sleuth:${springStarterSleuth}")
+    //implementation("org.springframework.cloud:spring-cloud-starter-sleuth:${springStarterSleuth}")
 
 	// cloudant
-    implementation group: 'com.cloudant', name: 'cloudant-client', version: '2.17.0'
-    implementation group: 'com.jayway.jsonpath', name: 'json-path', version: '2.4.0'
-    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.1'
-    implementation group: 'joda-time', name: 'joda-time', version: '2.10.3'
+     // implementation group: 'com.cloudant', name: 'cloudant-client', version: '2.17.0'
+    //  implementation group: 'com.jayway.jsonpath', name: 'json-path', version: '2.4.0'
+    //  implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.1'
+    //  implementation group: 'joda-time', name: 'joda-time', version: '2.10.3'
  
     // pact
-    testImplementation group: 'au.com.dius', name: 'pact-jvm-provider-junit5', version: project.pactVersion
-    testImplementation group: 'au.com.dius', name: 'pact-jvm-provider', version: project.pactVersion
-    testImplementation group: 'au.com.dius', name: 'pact-jvm-consumer-junit5', version: project.pactVersion
-    testImplementation group: 'au.com.dius', name: 'pact-jvm-consumer', version: project.pactVersion
+    //testImplementation group: 'au.com.dius', name: 'pact-jvm-provider-junit5', version: project.pactVersion
+    //testImplementation group: 'au.com.dius', name: 'pact-jvm-provider', version: project.pactVersion
+    //testImplementation group: 'au.com.dius', name: 'pact-jvm-consumer-junit5', version: project.pactVersion
+    //testImplementation group: 'au.com.dius', name: 'pact-jvm-consumer', version: project.pactVersion
 
     // swagger
     implementation group: 'io.springfox', name: 'springfox-swagger2', version: "${swaggerVersion}"
     implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: "${swaggerVersion}"
 	
-    testImplementation("org.powermock:powermock-api-mockito2:${powermockMockitoVersion}")
+    //testImplementation("org.powermock:powermock-api-mockito2:${powermockMockitoVersion}")
 }
 
 test {
-	useJUnitPlatform()
+	//useJUnitPlatform()
 }
 
 testlogger {
@@ -89,24 +95,3 @@ task run {
     dependsOn 'bootRun'
 }
 
-def pactBrokerUrl = project.hasProperty('pactBrokerUrl') ? pactBrokerUrl : 'http://localhost'
-def providerName = project.hasProperty('pactProvider') ? pactProvider : project.name
-def pactProtocol = project.hasProperty('pactProtocol') ? pactProtocol : 'http'
-def pactHost = project.hasProperty('pactHost') ? pactHost : 'localhost'
-def pactPort = project.hasProperty('pactPort') ? pactPort : '8080'
-pact {
-    serviceProviders {
-        // You can define as many as you need, but each must have a unique name
-        "${providerName}" {
-            // All the provider properties are optional, and have sensible defaults (shown below)
-            protocol = pactProtocol
-            host = pactHost
-            port = pactPort
-            path = '/'
-
-            if ('pactVerify' in gradle.startParameter.taskNames) {
-                hasPactsFromPactBroker(pactBrokerUrl)
-            }
-        }
-    }
-}
