--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://mysql.saurabhg-otb.svc.cluster.local:3306/rhos_reservation_db_tcs
-spring.datasource.username=hbstudent
-spring.datasource.password=h6student
+spring.datasource.url=jdbc:mysql://mysql.pipe-tute-demo.svc.cluster.local:3306/rhos_reservation_db_tcs
+spring.datasource.username=rhosotb
+spring.datasource.password=rhosotb
 
